--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Flex Box</title>
+      <title>Error Page</title>
+
+      <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
+      <style>
+         body {
+            font-family: 'Merriweather', serif;
+            background-color: lightgoldenrodyellow;
+         }
+
+         .error_wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+         }
+            .error_heading {
+               margin-bottom: 42px;
+            }
+            img {
+               width: 50%;
+            }
+      </style>
    </head>
 
    <body>
-      <h1>Hola Flexbox!</h1>
-      <p>Algún contingut ací.</p>
+      <div class="error_wrapper">
+         <div class="error_heading">
+            <h2>Yike... Who knows when that page will be available, would you like to try another.</h2>
+         </div>
+
+         <img src="img/tbot.png" alt="Error" />
+      </div>
    </body>
 </html>
