--- a/index.html
+++ b/index.html
@@ -4,38 +4,121 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Error Page</title>
+      <title>Cards</title>
 
-      <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
+      <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
       <style>
          body {
-            font-family: 'Merriweather', serif;
-            background-color: lightgoldenrodyellow;
+            font-family: 'Lato', sans-serif;
          }
 
-         .error_wrapper {
+        .container {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
          }
-            .error_heading {
-               margin-bottom: 42px;
+            .container .item {
+               display: flex;
+               flex: 1;
+               justify-content: space-between;
+               border: 1px solid grey;
+               border-radius: 5px;
+               margin: 10px;
             }
-            img {
-               width: 50%;
+            .item .featured {
+               flex: auto;
             }
+            .item .associated {
+               flex: initial;
+            }
+               .container .item .content {
+                  display: flex;
+               }
+                  .container .item .content .metadata {
+                     display: flex;
+                     flex-direction: column;
+                     justify-content: center;
+                     margin-left: 20px;
+                  }
+                     .container .item .content .metadata .title {
+                        margin: 0;
+                     }
+
+               .container .item .btn-group {
+                  display: flex;
+                  align-items: center;
+               }
+                  .container .item .btn-group .button {
+                     display: flex;
+                     flex-direction: row;
+                     justify-content: center;
+                     align-items: center;
+                     font-size: 2em;
+                     width: 42px;
+                     height: 100%;
+                  }
+                  .container .item .btn-group .button:hover {
+                     background-color: lightslategray;
+                     cursor: pointer;
+                  }
+                     .container .item .btn-group .button a {
+                        color: lightseagreen;
+                        text-decoration: none;
+                     }
+                     .container .item .btn-group .button:hover a {
+                        color: white;
+                     }
       </style>
    </head>
 
    <body>
-      <div class="error_wrapper">
-         <div class="error_heading">
-            <h2>Yike... Who knows when that page will be available, would you like to try another.</h2>
+      <div class='container'>
+         <div class='item featured'>
+
+            <div class='content'>
+               <img src='https://d32xj74kbqkoqn.cloudfront.net/uploads/campsite/campsite_image/129/dissecting-rails-icon.jpg' width='200px' height='120px' />
+
+               <div class='metadata'>
+                  <h1 class='title'>My amazing title</h1>
+                  <h3>And a subtitle</h3>
+               </div>
+            </div>
+
+            <div class='btn-group'>
+               <div class='button'>
+                  <a href="#">
+                     <i class="fas fa-plus-circle"></i>
+                  </a>
+               </div>
+               <div class='button'>
+                  <a href="#">
+                     <i class="fas fa-times-circle"></i>
+                  </a>
+               </div>
+            </div>
          </div>
 
-         <img src="img/tbot.png" alt="Error" />
-      </div>
-   </body>
+         <div class='item associated'>
+            <div class='content'>
+               <img src='https://d32xj74kbqkoqn.cloudfront.net/uploads/guide/video_image/43/foundations-video-thumb.jpg' width='200px' height='120px' />
+
+               <div class='metadata'>
+                  <h1 class='title'>Another amazing post</h1>
+               </div>
+            </div>
+
+            <div class='btn-group'>
+               <div class='button'>
+                  <a href="#">
+                     <i class="fas fa-plus-circle"></i>
+                  </a>
+               </div>
+               <div class='button'>
+                  <a href="#">
+                     <i class="fas fa-times-circle"></i>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>  
+  </body>
 </html>
